<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_horizontal"
            android:layout_marginTop="@dimen/space_vertical"
            android:layout_marginBottom="@dimen/space_vertical_between"
            android:text="@string/settings_connection"
            style="@style/text.headline"/>

        <LinearLayout
            android:id="@+id/container_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:paddingVertical="@dimen/space_vertical_between"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_connection_url"
                style="@style/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_connection_url_info"
                style="@style/text.light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_cert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:paddingVertical="@dimen/space_vertical_between"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_connection_cert"
                style="@style/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_connection_cert_info"
                style="@style/text.light"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_horizontal"
            android:layout_marginTop="@dimen/space_vertical"
            android:layout_marginBottom="@dimen/space_vertical_between"
            android:text="@string/settings_customization"
            style="@style/text.headline"/>

        <LinearLayout
            android:id="@+id/container_warnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:paddingVertical="@dimen/space_vertical_between">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_warnings"
                    style="@style/text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_warnings_info"
                    style="@style/text.light"/>

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_warnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_horizontal_between"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:paddingVertical="@dimen/space_vertical_between">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_errors"
                    style="@style/text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_customization_errors_info"
                    style="@style/text.light"/>

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_horizontal_between"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
