<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.url.UrlActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIconTint="@color/md_theme_onSurface"
        app:titleTextColor="@color/md_theme_onSurface"
        app:title="@string/url_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_vertical"
                android:backgroundTint="@color/md_theme_tertiaryContainer"
                app:cardCornerRadius="@dimen/corners_default">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/space_vertical"
                    android:layout_marginHorizontal="@dimen/space_horizontal"
                    android:text="@string/url_info"
                    app:drawableStartCompat="@drawable/ic_info"
                    style="@style/text.info"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_vertical"
                android:backgroundTint="@color/md_theme_surfaceContainer"
                app:cardCornerRadius="@dimen/corners_default">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/space_vertical"
                    android:layout_marginHorizontal="@dimen/space_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/container_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/url_input_server">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textUri"
                            tools:text="http://smarthome.christian2003.de"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_vertical_between"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/space_horizontal_between"
                            android:text="@string/button_cancel"
                            style="@style/Widget.Material3.Button.OutlinedButton"/>

                        <Button
                            android:id="@+id/button_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_save"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
